--- a/smiley_face/index.html
+++ b/smiley_face/index.html
@@ -14,7 +14,36 @@
         <div class="face">
             <div class="lefteye"></div>
         </div>
-    </div>
+
+        <h2>Step 3: Add a right eye</h2>
+        <div class="face">
+            <div class="lefteye"></div>
+            <div class="righteye"></div>
+            </div>
+
+        <h2>Step 4: Add a mouth</h2>
+        <div class="face">
+            <div class="lefteye"></div>
+            <div class="righteye"></div>  
+            <div class="mouth"></div>  
+        </div>
+
+        <h2>Step 5: Add Inner Eyes</h2>
+            <div class="face">
+                <div class="lefteye"><div id=inner-left></div></div>
+                <div class="righteye"><div id=inner-right></div></div>  
+                <div class="mouth"></div>  
+        </div>
+
+        <h2>Step 6: Add your own features</h2>
+            <div class="face">
+                <div class="right-eyebrow"></div>
+                <div class="left-eyebrow"></div>
+                <div class="lefteye"><div id=inner-left><div class="left-pupil"></div></div></div>
+                <div class="righteye"><div id=inner-right><div class="right-pupil"></div></div></div>  
+                <div class="mouth"><div class="teeth"></div><div class="tongue"></div></div>  
+             
+        </div>
     
 </body>
 </html>
